# LittleCompiler

./: .gitignore  Cargo.toml  README.md
examples/: echo.las  fib_recursive.las  fibonacci.las  hello_world.las  recursive.las
src/: main.rs
src/backend/: compiler.rs  data_storage.rs  instruction_line.rs  mod.rs
src/frontend/: ast.rs  grammar.pest  parser.rs  util_macros.rs
src/parser/: ast.rs  grammar.pest  mod.rs  parser.rs
