[package]
name = "vm_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.5"
pest_derive = "2.5.5"
anyhow = {version = "1.0.69", features = ["default"]}
strum = "0.24.1"
strum_macros = "0.24.3"
clap = { version = "4.1.6", features = ["derive"] }
byteorder = "1.4.3"
num = "0.4.0"